apps/kavita/kavita-namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: kavita
  labels:
    app.kubernetes.io/name: kavita
    app.kubernetes.io/part-of: day2-services
  annotations:
    argocd.argoproj.io/sync-wave: "0"
