apps/kavita/kavita-service.yml
apiVersion: v1
kind: Service
metadata:
  name: kavita
  namespace: kavita
  labels:
    app: kavita
    app.kubernetes.io/name: kavita
    argocd.argoproj.io/managed-by: argocd
spec:
  type: ClusterIP
  selector:
    app: kavita
  ports:
  - name: http
    port: 5000
    targetPort: 5000
    protocol: TCP
